--- a/scripts-fearnley/project1.ipynb
+++ b/scripts-fearnley/project1.ipynb
@@ -8,7 +8,8 @@
     "- Puts 1s in tx\n",
     "- Polynomial regression (deg 2)\n",
     "- Cross validation\n",
-    "- Remove outliers"
+    "- Remove outliers\n",
+    "- Standardise data"
    ]
   },
   {
@@ -62,7 +63,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -372,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -383,7 +384,7 @@
        "(250000, 30)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +397,7 @@
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -486,31 +487,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(68114, 30)"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10000, 30) (10000,)\n"
+     ]
     }
    ],
    "source": [
+    "max_rows = 10000\n",
     "col_outliers = [0, 4, 5, 6, 12, 23, 24, 25, 26, 27, 28\n",
     "]\n",
     "outlier_filter = (tX[:,0]>-900)\n",
     "for col in col_outliers:\n",
     "    outlier_filter = outlier_filter & (tX[:,col]>-900)\n",
     "tX_filtered = tX[outlier_filter]\n",
+    "tX_filtered = tX[:max_rows,:]\n",
     "y_filtered = y[outlier_filter]\n",
-    "tX_filtered.shape"
+    "y_filtered = y[:max_rows]\n",
+    "print(tX_filtered.shape, y_filtered.shape)"
    ]
   },
   {
@@ -524,7 +525,7 @@
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -3712,20 +3713,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(68114, 61)"
-      ]
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'tX_filtered' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-cc996a6d2274>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[1;31m#     tx = np.concatenate([np.power(x,i) for i in range(0,degree+1)]).reshape(degree+1, len(x)).T\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mbuild_poly\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtX_filtered\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'tX_filtered' is not defined"
+     ]
     }
    ],
    "source": [
@@ -3939,6 +3941,107 @@
    "metadata": {},
    "source": [
     "# Logistic regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from logistic_regression import logistic_regression_stochastic_gradient_descent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(250000,)"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from helpers import standardize\n",
+    "tX_norm, mean, std = standardize(tX, None, None)\n",
+    "# Treat data: replace -1 with 0\n",
+    "treated_y = np.maximum(y,0)\n",
+    "treated_y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current iteration=0, the loss=693147.1805599461\n",
+      "Current iteration=1, the loss=692672.081590484\n",
+      "Current iteration=2, the loss=691965.8011803371\n",
+      "Current iteration=3, the loss=691710.702001025\n",
+      "Current iteration=4, the loss=691338.120860618\n",
+      "Current iteration=5, the loss=691089.9922929847\n",
+      "Current iteration=6, the loss=689991.0977336578\n",
+      "Current iteration=7, the loss=690561.8899968863\n",
+      "Current iteration=8, the loss=689209.7488691239\n",
+      "Current iteration=9, the loss=687561.8741310257\n",
+      "Current iteration=10, the loss=687789.1126447511\n",
+      "Current iteration=11, the loss=687953.7787220835\n",
+      "Current iteration=12, the loss=687349.8990678616\n",
+      "Current iteration=13, the loss=687187.4994735616\n",
+      "Current iteration=14, the loss=685574.4771803406\n",
+      "Current iteration=15, the loss=686150.8842036604\n",
+      "Current iteration=16, the loss=685276.9343958253\n",
+      "Current iteration=17, the loss=685972.4826088479\n",
+      "Current iteration=18, the loss=684978.0721264824\n",
+      "Current iteration=19, the loss=683854.9581324048\n",
+      "Current iteration=20, the loss=685569.5659122447\n",
+      "Current iteration=21, the loss=683688.438925634\n",
+      "Current iteration=22, the loss=682487.8725367473\n",
+      "Current iteration=23, the loss=683154.9789289013\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-89-ff43474837c7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0malpha\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1e-5\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mbatch_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1000\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mlr_std_loss_mse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlr_std_w_mse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlogistic_regression_stochastic_gradient_descent\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtreated_y\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maffine_tX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minitial_w\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_iter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmax_iter\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mthreshold\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mthreshold\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0malpha\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32mC:\\Users\\Fearnley\\Documents\\EPFL\\Machine learning\\ML_pro_1\\pro1\\scripts-fearnley\\logistic_regression.py\u001b[0m in \u001b[0;36mlogistic_regression_stochastic_gradient_descent\u001b[0;34m(y, tx, initial_w, max_iter, threshold, alpha, batch_size)\u001b[0m\n\u001b[1;32m    123\u001b[0m \u001b[1;31m#            gradient = calculate_stochastic_gradient(minibatch_y, minibatch_tx, w)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[1;31m#            w = np.subtract(w, alpha * gradient)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 125\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlearning_by_stochastic_gradient_descent\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mminibatch_y\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mminibatch_tx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    126\u001b[0m             \u001b[1;31m# log info\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    127\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mcount\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;36m1\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\Fearnley\\Documents\\EPFL\\Machine learning\\ML_pro_1\\pro1\\scripts-fearnley\\logistic_regression.py\u001b[0m in \u001b[0;36mlearning_by_stochastic_gradient_descent\u001b[0;34m(y, tx, w, alpha)\u001b[0m\n\u001b[1;32m     79\u001b[0m     \"\"\"\n\u001b[1;32m     80\u001b[0m     \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcalculate_loss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m     \u001b[0mgradient\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcalculate_stochastic_gradient\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     82\u001b[0m     \u001b[0mw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mw\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0malpha\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mgradient\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mloss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\Fearnley\\Documents\\EPFL\\Machine learning\\ML_pro_1\\pro1\\scripts-fearnley\\logistic_regression.py\u001b[0m in \u001b[0;36mcalculate_stochastic_gradient\u001b[0;34m(y, tx, w)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcalculate_stochastic_gradient\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m     \u001b[1;34m\"\"\"compute the gradient of loss.\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m     \u001b[1;32mreturn\u001b[0m \u001b[0mtx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msubtract\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msigmoid\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m \u001b[1;31m#    res = np.zeros((tx.shape[1],1))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[1;31m#    N, D = tx.shape\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\Fearnley\\Documents\\EPFL\\Machine learning\\ML_pro_1\\pro1\\scripts-fearnley\\logistic_regression.py\u001b[0m in \u001b[0;36msigmoid\u001b[0;34m(t)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0msigmoid\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[1;34m\"\"\"apply sigmoid function on t.\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdivide\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "affine_tX = build_poly(tX_norm, 1)\n",
+    "# affine_tX = tX_norm\n",
+    "initial_w = np.zeros((affine_tX.shape[1], 1))\n",
+    "max_iter = 100\n",
+    "threshold = 1e-8\n",
+    "alpha = 1e-5\n",
+    "batch_size = 1000\n",
+    "lr_std_loss_mse, lr_std_w_mse = logistic_regression_stochastic_gradient_descent(treated_y,affine_tX, initial_w, max_iter=max_iter, threshold=threshold, alpha=alpha, batch_size=batch_size)"
    ]
   },
   {
