--- a/implementations.ipynb
+++ b/implementations.ipynb
@@ -36,13 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from proj1_helpers import *\n",
+    "from helpers import *\n",
     "DATA_TRAIN_PATH = 'data/train.csv' \n",
     "y, tX, ids = load_csv_data(DATA_TRAIN_PATH)"
    ]
@@ -65,20 +65,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from scripts import least_squares_GD\n",
-    "from costs import compute_loss\n",
+    "from implementations import least_squares_GD\n",
     "from cross_validation import cross_validation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -100,13 +99,14 @@
    ],
    "source": [
     "# MSE\n",
-    "gd_loss, gd_w = least_squares_GD(y, tX, 1e-7, 100)\n",
+    "initial_w = np.zeros(tX.shape[1])\n",
+    "gd_w, gd_loss = least_squares_GD(y, tX, initial_w, 100, 1e-7)\n",
     "print (gd_loss, gd_w)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -115,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.665876\n"
+      "(0.665876, [0.665664, 0.66816, 0.664336, 0.665344])\n"
      ]
     }
    ],
@@ -133,18 +133,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from scripts import least_squares_SGD"
+    "from implementations import least_squares_SGD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -153,44 +153,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.404700640241 [  4.77849060e-04  -4.39326529e-04  -1.76124848e-04   9.91750700e-05\n",
-      "  -3.72070473e-05   4.95361063e-04  -4.72555315e-05  -2.56855003e-06\n",
-      "  -8.64936492e-05  -2.04214226e-04  -9.78531320e-06   7.10273012e-06\n",
-      "  -3.81605615e-05   1.36985528e-04  -1.31584656e-07  -3.22522772e-07\n",
-      "  -1.37451459e-04  -1.35766949e-07   2.85906890e-07  -3.41915451e-05\n",
-      "   4.38122845e-07  -3.23562047e-04  -4.50475596e-06   4.67510154e-05\n",
-      "   5.61097704e-05   5.60987118e-05  -1.34661019e-04  -3.87498293e-05\n",
-      "  -3.89620996e-05  -2.03748232e-04]\n"
+      "0.404678200185 [  4.78332140e-04  -4.39132721e-04  -1.75768269e-04   9.93507739e-05\n",
+      "  -3.84743387e-05   4.95538898e-04  -4.85378685e-05  -2.55916345e-06\n",
+      "  -8.63975764e-05  -2.03458230e-04  -9.78167912e-06   7.10082931e-06\n",
+      "  -3.94356324e-05   1.37168382e-04  -1.26248989e-07  -3.14509656e-07\n",
+      "  -1.37264810e-04  -1.26777917e-07   2.89749142e-07  -3.40684727e-05\n",
+      "   4.32899800e-07  -3.22579923e-04  -4.49920816e-06   4.51371667e-05\n",
+      "   5.42852151e-05   5.42757751e-05  -1.35812093e-04  -4.00271879e-05\n",
+      "  -4.02381008e-05  -2.03361739e-04]\n"
      ]
     }
    ],
    "source": [
     "# MSE unfiltered data\n",
-    "sgd_loss, sgd_w = least_squares_SGD(y, tX, 1e-7, 10, 5000)\n",
+    "initial_w = np.zeros(tX.shape[1])\n",
+    "sgd_w, sgd_loss = least_squares_SGD(y, tX, initial_w, 10, 1e-7)\n",
     "print(sgd_loss, sgd_w)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Fearnley\\Documents\\EPFL\\Machine learning\\ML_pro_1\\pro1\\helpers.py:47: VisibleDeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n",
-      "  yield shuffled_y[start_index:end_index], shuffled_tx[start_index:end_index]\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.702404\n"
+      "(0.6988079999999999, [0.700896, 0.697248, 0.6996, 0.697488])\n"
      ]
     }
    ],
@@ -208,18 +201,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from scripts import least_squares"
+    "from implementations import least_squares"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -241,13 +234,13 @@
    ],
    "source": [
     "# MSE unfiltered data\n",
-    "ls_loss, ls_w = least_squares(y, tX)\n",
+    "ls_w, ls_loss = least_squares(y, tX)\n",
     "print (ls_loss,ls_w)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -256,7 +249,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.744256\n"
+      "(0.744256, [0.744272, 0.743616, 0.746464, 0.742672])\n"
      ]
     }
    ],
@@ -297,13 +290,13 @@
    "source": [
     "# MSE with filtered data, affine model\n",
     "affine_tX = affine = np.hstack((np.ones((tX.shape[0],1)),tX))\n",
-    "ls_loss_affine, ls_w_affine = least_squares(y, affine_tX)\n",
+    "ls_w_affine, ls_loss_affine = least_squares(y, affine_tX)\n",
     "print (ls_loss_affine,ls_w_affine)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -312,7 +305,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.744952\n"
+      "(0.744952, [0.74504, 0.743856, 0.747216, 0.743696])\n"
      ]
     }
    ],
@@ -330,18 +323,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from scripts import ridge_regression"
+    "from implementations import ridge_regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -363,13 +356,13 @@
    ],
    "source": [
     "lamb = 1e-1\n",
-    "rr_loss, rr_w = ridge_regression(y, tX, lamb)\n",
+    "rr_w, rr_loss = ridge_regression(y, tX, lamb)\n",
     "print (rr_loss,rr_w)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -378,7 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7380120000000001\n"
+      "(0.7380120000000001, [0.737792, 0.73696, 0.739904, 0.737392])\n"
      ]
     }
    ],
@@ -391,12 +384,218 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Logistic regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def clean_data(tX):\n",
+    "    N = tX.shape[0]\n",
+    "    D = tX.shape[1]\n",
+    "    tX_clean = np.copy(np.array(tX))\n",
+    "    for n in range(N):\n",
+    "        for d in range(D):\n",
+    "            if tX_clean[n,d] == -999.0:\n",
+    "                tX_clean[n,d] = 0\n",
+    "    return tX_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5237.55233243] [[ -7.47263324e-01]\n",
+      " [  1.49910434e-01]\n",
+      " [ -5.82005431e-01]\n",
+      " [ -2.15167209e-01]\n",
+      " [  1.67060763e-01]\n",
+      " [  8.90656448e-02]\n",
+      " [  1.77274698e-01]\n",
+      " [ -1.14337573e-01]\n",
+      " [  2.85837484e-01]\n",
+      " [ -7.99720638e-02]\n",
+      " [  9.32590213e-03]\n",
+      " [ -2.40694011e-01]\n",
+      " [  2.78148015e-01]\n",
+      " [  1.79845572e-01]\n",
+      " [  3.28216928e-01]\n",
+      " [ -2.93834075e-03]\n",
+      " [ -1.57004055e-02]\n",
+      " [  1.31843213e-01]\n",
+      " [  2.94058746e-04]\n",
+      " [  9.27588668e-03]\n",
+      " [  9.31304875e-03]\n",
+      " [  1.29900370e-03]\n",
+      " [ -5.62660799e-02]\n",
+      " [ -1.21997739e-01]\n",
+      " [  3.17158097e-02]\n",
+      " [ -1.86252913e-02]\n",
+      " [ -1.86336943e-03]\n",
+      " [ -1.08234565e-01]\n",
+      " [ -2.25790370e-03]\n",
+      " [ -3.77425955e-04]\n",
+      " [ -9.37203852e-02]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from implementations import logistic_regression\n",
+    "\n",
+    "tX_norm, _, _ = standardize(clean_data(tX), None, None)\n",
+    "y_shifted = np.array([1 if i==1 else 0 for i in y])\n",
+    "initial_w = np.zeros((tX_norm.shape[1],1))\n",
+    "\n",
+    "lr_w, lr_loss = logistic_regression(y_shifted, tX_norm, initial_w, max_iters=20, gamma=0.00008)\n",
+    "print(lr_loss, lr_w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.750348, [0.750848, 0.749296, 0.752576, 0.748672])\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr_accuracy = cross_validation(y_shifted, tX_norm, 0.00008, method='logistic_regression')\n",
+    "print(lr_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Regularised logistic regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Fearnley\\Documents\\EPFL\\Machine learning\\ML_pro_1\\pro1\\implementations.py:220: VisibleDeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n",
+      "  y_batch = np.zeros((batch_size,1))\n",
+      "C:\\Users\\Fearnley\\Documents\\EPFL\\Machine learning\\ML_pro_1\\pro1\\helpers.py:47: VisibleDeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n",
+      "  yield shuffled_y[start_index:end_index], shuffled_tx[start_index:end_index]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 15669.27741059] [[-0.92377853]\n",
+      " [ 0.17800081]\n",
+      " [-0.75130433]\n",
+      " [-0.50996402]\n",
+      " [ 0.23041456]\n",
+      " [ 0.02995862]\n",
+      " [ 0.36586601]\n",
+      " [-0.03669818]\n",
+      " [ 0.63282032]\n",
+      " [-0.21779261]\n",
+      " [-0.16676848]\n",
+      " [-0.37493274]\n",
+      " [ 0.2622428 ]\n",
+      " [ 0.21495459]\n",
+      " [ 0.58053175]\n",
+      " [-0.00311884]\n",
+      " [-0.00743836]\n",
+      " [ 0.33647252]\n",
+      " [ 0.00888818]\n",
+      " [ 0.01650483]\n",
+      " [ 0.0236441 ]\n",
+      " [ 0.0019276 ]\n",
+      " [-0.24297976]\n",
+      " [-0.32840178]\n",
+      " [-0.06904297]\n",
+      " [-0.00311622]\n",
+      " [-0.00565082]\n",
+      " [-0.39965793]\n",
+      " [ 0.01500818]\n",
+      " [ 0.00245289]\n",
+      " [-0.4053564 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from implementations import reg_logistic_regression\n",
+    "\n",
+    "tX_norm, _, _ = standardize(clean_data(tX), None, None)\n",
+    "y_shifted = np.array([1 if i==1 else 0 for i in y])\n",
+    "initbial_w = np.zeros((tX_norm.shape[1],1))\n",
+    "\n",
+    "rlr_w, rlr_loss = reg_logistic_regression(y_shifted, tX_norm, 0.1, initial_w, max_iters=20, gamma=0.00008)\n",
+    "print(rlr_loss, rlr_w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Fearnley\\Documents\\EPFL\\Machine learning\\ML_pro_1\\pro1\\implementations.py:220: VisibleDeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n",
+      "  y_batch = np.zeros((batch_size,1))\n",
+      "C:\\Users\\Fearnley\\Documents\\EPFL\\Machine learning\\ML_pro_1\\pro1\\helpers.py:47: VisibleDeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n",
+      "  yield shuffled_y[start_index:end_index], shuffled_tx[start_index:end_index]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.751792, [0.751808, 0.748576, 0.754512, 0.752272])\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "rlr_accuracy = cross_validation(y_shifted, tX_norm, 0.00008, method='reg_logistic_regression')\n",
+    "print(rlr_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -414,22 +613,28 @@
        "      <th>Stochastic Gradient Descent</th>\n",
        "      <th>Least Squares</th>\n",
        "      <th>Ridge Regression</th>\n",
+       "      <th>Logistic Regression</th>\n",
+       "      <th>Regularised Logistic Regression</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Loss mse</th>\n",
        "      <td>0.415608</td>\n",
-       "      <td>0.404701</td>\n",
+       "      <td>0.404678</td>\n",
        "      <td>0.339687</td>\n",
        "      <td>0.364400</td>\n",
+       "      <td>5237.552332</td>\n",
+       "      <td>15669.277411</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Accuracy</th>\n",
        "      <td>0.665876</td>\n",
-       "      <td>0.702404</td>\n",
+       "      <td>0.698808</td>\n",
        "      <td>0.744256</td>\n",
        "      <td>0.738012</td>\n",
+       "      <td>0.750348</td>\n",
+       "      <td>0.751792</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -437,24 +642,30 @@
       ],
       "text/plain": [
        "          Gradient Descent  Stochastic Gradient Descent  Least Squares  \\\n",
-       "Loss mse          0.415608                     0.404701       0.339687   \n",
-       "Accuracy          0.665876                     0.702404       0.744256   \n",
+       "Loss mse          0.415608                     0.404678       0.339687   \n",
+       "Accuracy          0.665876                     0.698808       0.744256   \n",
        "\n",
-       "          Ridge Regression  \n",
-       "Loss mse          0.364400  \n",
-       "Accuracy          0.738012  "
+       "          Ridge Regression  Logistic Regression  \\\n",
+       "Loss mse          0.364400          5237.552332   \n",
+       "Accuracy          0.738012             0.750348   \n",
+       "\n",
+       "          Regularised Logistic Regression  \n",
+       "Loss mse                     15669.277411  \n",
+       "Accuracy                         0.751792  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_results = pd.DataFrame([[gd_loss, sgd_loss, ls_loss, rr_loss],\n",
-    "                           [gd_accuracy, sgd_accuracy, ls_accuracy, rr_accuracy]\n",
+    "\n",
+    "\n",
+    "df_results = pd.DataFrame([[gd_loss, sgd_loss, ls_loss, rr_loss, lr_loss[0], rlr_loss[0]],\n",
+    "                           [gd_accuracy[0], sgd_accuracy[0], ls_accuracy[0], rr_accuracy[0], lr_accuracy[0], rlr_accuracy[0]]\n",
     "                          ])\n",
-    "df_results.columns = ['Gradient Descent', 'Stochastic Gradient Descent', 'Least Squares', 'Ridge Regression']\n",
+    "df_results.columns = ['Gradient Descent', 'Stochastic Gradient Descent', 'Least Squares', 'Ridge Regression', 'Logistic Regression', 'Regularised Logistic Regression']\n",
     "df_results.index = ['Loss mse','Accuracy']\n",
     "df_results"
    ]
