--- a/project1.ipynb
+++ b/project1.ipynb
@@ -42,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "from proj1_helpers import *\n",
+    "from helpers import *\n",
     "DATA_TRAIN_PATH = '/home/yuezuegu/PCML/train.csv' # TODO: download train data and supply path here \n",
     "y, tX, ids = load_csv_data(DATA_TRAIN_PATH)\n",
     "\n",
